fixed navigation in top menu being behind other nav, and updated search page

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     Author: Iowa AEAs
     Author URI: https://example.com/
     Template: twentytwentyfive
-    Version: 1.5.43
+    Version: 1.5.45
     License: GNU General Public License v2 or later
     License URI: http://www.gnu.org/licenses/gpl-2.0.html
     Text Domain: iowa-aea-theme
@@ -506,6 +506,7 @@ body {
 
 .wp-block-navigation-item {
   .wp-block-navigation__submenu-container {
+    z-index: 100 !important;
     @media (min-width: 800px) {
       border: 1px solid var(--wp--preset--color--primary) !important;
       border-top-width: 10px !important;
